Member/tan 22677941 (#111)
* feat: Add CORS configuration and integrate actuator dependency for enhanced security and monitoring

* feat: xử lí lỗi get order

* them redis de doi trang thai don hang khi het han

---------

Co-authored-by: luongtan204 <luongtan204@gmail.com>