@@ -8,7 +8,6 @@ import com.notfound.bookstore.model.dto.response.ApiResponse;
 import com.notfound.bookstore.model.dto.response.paymentresponse.CreatePaymentResponse;
 import com.notfound.bookstore.model.dto.response.paymentresponse.PaymentResponse;
 import com.notfound.bookstore.model.dto.response.paymentresponse.ZaloPayCallBackResponseDTO;
-import com.notfound.bookstore.payment.VNPayService;
 import com.notfound.bookstore.service.impl.MoMoServiceImpl;
 import com.notfound.bookstore.service.impl.VNPayServiceImpl;
 import com.notfound.bookstore.service.impl.ZaloPayServiceImpl;
@@ -16,11 +15,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import java.io.IOException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 
 /**
@@ -36,6 +37,9 @@ public class PaymentController {
     private final VNPayServiceImpl vnPayService;
     private final ZaloPayServiceImpl zaloPayService;
     private final MoMoServiceImpl moMoService;
+
+    @Value("${frontend.url}")
+    private String frontendUrl;
 
     /**
      * Tạo URL thanh toán VNPay
@@ -83,16 +87,37 @@ public class PaymentController {
      * Xác thực chữ ký và cập nhật trạng thái đơn hàng
      *
      * @param vnpParams Các tham số callback từ VNPay bao gồm vnp_ResponseCode, vnp_TransactionNo, vnp_SecureHash
-     * @return Kết quả xử lý thanh toán bao gồm trạng thái và thông tin giao dịch
+     * @param response HttpServletResponse để redirect về frontend
      */
     @GetMapping("/vnpay/callback")
-    public ApiResponse<PaymentResponse> handleVNPayReturn(VNPayCallbackRequest vnpParams) {
+    public void handleVNPayReturn(
+            VNPayCallbackRequest vnpParams,
+            HttpServletResponse response
+    ) throws IOException {
+        // 1. Xử lý callback và cập nhật payment/order status
         PaymentResponse paymentResponse = vnPayService.handleVNPayReturn(vnpParams);
-        return ApiResponse.<PaymentResponse>builder()
-                .code(200)
-                .result(paymentResponse)
-                .message("Thanh toán thành công")
-                .build();
+
+        // 2. Lấy redirectUrl từ Payment entity
+        String redirectUrl = vnPayService.getRedirectUrlByTransactionId(vnpParams.getVnp_TxnRef());
+
+        // Fallback nếu không tìm thấy redirectUrl
+        if (redirectUrl == null || redirectUrl.isEmpty()) {
+            redirectUrl = frontendUrl;
+        }
+
+        // 3. Build final redirect URL with payment result
+        String finalUrl = redirectUrl
+                + "?resultCode=" + vnpParams.getVnp_ResponseCode()
+                + "&message=" + URLEncoder.encode(
+                    vnpParams.isSuccess() ? "Thanh toán thành công" : "Thanh toán thất bại",
+                    StandardCharsets.UTF_8
+                )
+                + "&orderId=" + paymentResponse.getOrderId()
+                + "&paymentId=" + paymentResponse.getPaymentId()
+                + "&status=" + paymentResponse.getStatus();
+
+        // 4. Redirect về Frontend
+        response.sendRedirect(finalUrl);
     }
 
     /**
@@ -114,14 +139,55 @@ public class PaymentController {
      * Endpoint này được gọi khi người dùng quay lại website sau khi thanh toán
      * Hiển thị kết quả thanh toán cho người dùng
      *
-     * @return Thông báo kết quả thanh toán
+     * @param apptransid App transaction ID từ ZaloPay
+     * @param status Status code từ ZaloPay (1: success, 0: failed)
+     * @param response HttpServletResponse để redirect về frontend
      */
     @GetMapping("/zalopay/return")
-    public ApiResponse<PaymentResponse> handleZaloPayReturn(){
-        return ApiResponse.<PaymentResponse>builder()
-                .code(200)
-                .message("Thành công")
-                .build();
+    public void handleZaloPayReturn(
+            @RequestParam(required = false) String apptransid,
+            @RequestParam(required = false) Integer status,
+            HttpServletResponse response
+    ) throws IOException {
+        // Default redirect URL
+        String redirectUrl = frontendUrl;
+        int resultCode = (status != null && status == 1) ? 0 : 1; // 0 = success, 1 = failed
+        String message = (resultCode == 0) ? "Thanh toán thành công" : "Thanh toán thất bại";
+        String orderId = "";
+        String paymentId = "";
+        String paymentStatus = "";
+
+        // Nếu có apptransid, lấy thông tin payment
+        if (apptransid != null && !apptransid.isEmpty()) {
+            try {
+                // Lấy redirectUrl và payment info từ DB
+                redirectUrl = zaloPayService.getRedirectUrlByTransactionId(apptransid);
+                if (redirectUrl == null || redirectUrl.isEmpty()) {
+                    redirectUrl = frontendUrl;
+                }
+
+                // Lấy payment response để có orderId, paymentId, status
+                // (Cần thêm method trong ZaloPayService nếu chưa có)
+                // PaymentResponse paymentResponse = zaloPayService.getPaymentByTransactionId(apptransid);
+                // orderId = paymentResponse.getOrderId();
+                // paymentId = paymentResponse.getPaymentId();
+                // paymentStatus = paymentResponse.getStatus();
+            } catch (Exception e) {
+                // Nếu có lỗi, dùng default
+                redirectUrl = frontendUrl;
+            }
+        }
+
+        // Build final redirect URL
+        String finalUrl = redirectUrl
+                + "?resultCode=" + resultCode
+                + "&message=" + URLEncoder.encode(message, StandardCharsets.UTF_8)
+                + "&orderId=" + orderId
+                + "&paymentId=" + paymentId
+                + "&status=" + paymentStatus;
+
+        // Redirect về Frontend
+        response.sendRedirect(finalUrl);
     }
 
     /**
@@ -208,17 +274,17 @@ public class PaymentController {
                     byte[] decodedBytes = Base64.getDecoder().decode(extraData);
                     redirectUrl = new String(decodedBytes);
                 } catch (Exception e) {
-                    redirectUrl = "http://localhost:3000"; // Last resort fallback
+                    redirectUrl = frontendUrl; // Fallback to configured frontend URL
                 }
             } else {
-                redirectUrl = "http://localhost:3000"; // Last resort fallback
+                redirectUrl = frontendUrl; // Fallback to configured frontend URL
             }
         }
 
         // 4. Build final redirect URL with payment result
         String finalUrl = redirectUrl
                 + "?resultCode=" + resultCode
-                + "&message=" + (message != null ? URLEncoder.encode(message, "UTF-8") : "")
+                + "&message=" + (message != null ? URLEncoder.encode(message, StandardCharsets.UTF_8) : "")
                 + "&orderId=" + paymentResponse.getOrderId()
                 + "&paymentId=" + paymentResponse.getPaymentId()
                 + "&status=" + paymentResponse.getStatus();
